Implement general flow with uniform crossover strategy