@@ -2,70 +2,68 @@ package com.uni.ea_autoscaler.prometheus;
 
 import com.uni.ea_autoscaler.prometheus.dto.PrometheusResponse;
 import com.uni.ea_autoscaler.prometheus.dto.PrometheusResult;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Repository;
 import org.springframework.web.client.RestTemplate;
 
+import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
 
+@Slf4j
 @Repository
 public class PrometheusClient {
 
     private final RestTemplate restTemplate;
-    private final String PROMETHEUS_BASE_URL = "http://localhost:30090";
+    private final String baseUrl;
 
-    public PrometheusClient(RestTemplateBuilder builder) {
+    public PrometheusClient(
+            RestTemplateBuilder builder,
+            @Value("${prometheus.url}") String baseUrl
+    ) {
         this.restTemplate = builder.build();
-    }
-
-    public Map<String, Optional<Double>> queryMultipleInstantMetrics(Map<String, String> metricQueries) {
-        Map<String, Optional<Double>> results = new HashMap<>();
-        for (Map.Entry<String, String> entry : metricQueries.entrySet()) {
-            results.put(entry.getKey(), queryInstantMetric(entry.getValue()));
-        }
-        return results;
-    }
-
-    public Optional<Double> queryInstantMetric(String promQL) {
-        String url = String.format("%s/api/v1/query?query=%s", PROMETHEUS_BASE_URL, URLEncoder.encode(promQL, StandardCharsets.UTF_8));
-        ResponseEntity<PrometheusResponse> response = restTemplate.getForEntity(url, PrometheusResponse.class);
-
-        if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
-            List<PrometheusResult> results = response.getBody().getData().getResult();
-            if (!results.isEmpty()) {
-                String valueStr = results.get(0).getValue().get(1);
-                return Optional.of(Double.parseDouble(valueStr));
-            }
-        }
-        return Optional.empty();
+        this.baseUrl = baseUrl;
     }
 
     public List<List<String>> queryRangeMetric(String promQL, String start, String end, String step) {
-        String url = String.format(
-                "%s/api/v1/query_range?query=%s&start=%s&end=%s&step=%s",
-                PROMETHEUS_BASE_URL,
-                URLEncoder.encode(promQL, StandardCharsets.UTF_8),
-                start,
-                end,
-                step
-        );
+        try {
+            String encodedQuery = URLEncoder.encode(promQL, StandardCharsets.UTF_8).replace("+", "%20");
+            String url = String.format(
+                    "%s/api/v1/query_range?query=%s&start=%s&end=%s&step=%s",
+                    baseUrl,
+                    encodedQuery,
+                    start,
+                    end,
+                    step
+            );
 
-        ResponseEntity<PrometheusResponse> response = restTemplate.getForEntity(url, PrometheusResponse.class);
+            log.info("📡 Prometheus range query: start={}, end={}, step={}, query={}", start, end, step, promQL);
+            log.info("📡 Final Prometheus URL: {}", url);
 
-        if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
-            List<PrometheusResult> results = response.getBody().getData().getResult();
-            if (!results.isEmpty()) {
-                return results.get(0).getValues();
+            URI uri = URI.create(url);
+            ResponseEntity<PrometheusResponse> response = restTemplate.getForEntity(uri, PrometheusResponse.class);
+
+            if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
+                List<PrometheusResult> results = response.getBody().getData().getResult();
+                if (!results.isEmpty()) {
+                    return results.get(0).getValues();
+                } else {
+                    log.warn("⚠️ No results found in Prometheus response.");
+                }
+            } else {
+                log.warn("⚠️ Invalid Prometheus response: {}", response.getStatusCode());
             }
+
+        } catch (Exception e) {
+            log.error("❌ Error querying Prometheus", e);
         }
 
-        return List.of();
+        return Collections.emptyList();
     }
 }
